--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
+   // id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
+   // id 'kotlin_android-extensions'
+//    id 'androidx.navigation.safeargs.kotlin'
+    //id 'com.google.devtools.ksp' version '1.8.0'
 }
 
 android {
@@ -46,7 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation("androidx.room:room-runtime:2.5.2")
+    /*implementation("androidx.room:room-runtime:2.5.2")
     annotationProcessor("androidx.room:room-compiler:2.5.2")
 
     // To use Kotlin annotation processing tool (kapt)
@@ -72,5 +75,25 @@ dependencies {
     // optional - Paging 3 Integration
     implementation("androidx.room:room-paging:2.5.2")
 
-   // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.5.2"
+   // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.5.2"*/
+
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
+    androidTestImplementation "androidx.room:room-testing:2.5.2"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+
+    // Kotlin components
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 }
