--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
    // id 'kotlin_android-extensions'
 //    id 'androidx.navigation.safeargs.kotlin'
     //id 'com.google.devtools.ksp' version '1.8.0'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -96,4 +97,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+
 }
